--- a/src/main/resources/templates/lecturer/lecturer_notifications.html
+++ b/src/main/resources/templates/lecturer/lecturer_notifications.html
@@ -46,7 +46,7 @@
                         <div th:if="${allNotificationNumber eq '0'}"
                              class="text-center d-flex justify-content-center mb-4" style="font-size: 1.5rem">
                             <div style="display: flex; flex-direction: column; width: 80%">
-                                <img src="/images/no-noti.png">
+                                <img class="mt-5" src="/images/no-noti.png">
                                 <p style="color: #0a429d">No notifications!</p>
                             </div>
                         </div>
