--- a/src/main/resources/templates/lecturer/document/lecturer_update-document.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_update-document.html
@@ -94,25 +94,13 @@
                                 <label for="resourceType" class="lecturer_input-label-doc">Type:</label>
                                 <div class="d-flex lecturer__input-doc">
                                     <select class="form-select " name="respondResourceType"
-                                            style="font-size: 1.3rem"
+                                            style="font-size: 1.3rem" th:field="*{resourceType}"
                                             id="resourceType">
                                         <option th:each="resourceType : ${resourceTypes}"
                                                 th:text="${resourceType.resourceTypeName}"
                                                 th:value="${resourceType.id}">
                                         </option>
                                     </select>
-                                </div>
-
-                                <div id="inputResourceWrapper"
-                                     style="display: none; margin-top: 4px">
-                                    <div class="lecturer__input-doc d-flex">
-                                        <input type="text" class="lecturer_input form-control" id="inputResource"
-                                               placeholder="Define your resource type...">
-                                        <button type="button" class="lecturer_search-btn ms-2 border-0"
-                                                id="defineButton" style="border-radius: 2px">
-                                            Define
-                                        </button>
-                                    </div>
                                 </div>
 
                                 <div id="editorWrapper" th:unless="${document.displayWithFile}">
