--- a/src/main/resources/templates/admin/account/admin_update-account.html
+++ b/src/main/resources/templates/admin/account/admin_update-account.html
@@ -64,10 +64,10 @@
                         <form method="post" role="form" th:action="@{/admin/accounts/update}"
                               th:object="${account}" th:id="update-account">
                             <table class="table-form lib_table ">
-                                <tr class="lib_input-wrapper">
+                                <tr class="lib_input-wrapper d-none">
                                     <td class="lib_input-label"><label th:for="id">Account ID</label></td>
-                                    <td><input type="text"
-                                               class="lib_input form-control" th:field="*{id}"
+                                    <td><input type="hidden"
+                                               class="lib_input form-control " th:field="*{id}"
                                                placeholder="Enter account ID" readonly>
                                     </td>
                                 </tr>
