--- a/src/main/resources/templates/librarian/course/librarian_courses-report.html
+++ b/src/main/resources/templates/librarian/course/librarian_courses-report.html
@@ -16,6 +16,15 @@
     <link rel="stylesheet" th:href="@{/css/fragment.css}"/>
     <link th:href="@{/css/styles/librarian.css}" rel="stylesheet">
     <link th:href="@{/css/table.css}" rel="stylesheet">
+
+    <style>
+        .tb-head {
+            border-top: 1px solid #dee2e6;
+            height: 40px;
+            line-height: 40px;
+            white-space: nowrap;
+        }
+    </style>
 </head>
 <body class="app_container">
 
@@ -32,7 +41,7 @@
             </div>
             <div class="d-flex justify-content-center">
                 <div class="lib_data-list-wrapper">
-                    <form th:action="@{/librarian/courses_report}" method="get">
+                    <form th:action="@{/librarian/courses_report}" method="get" id="myForm">
                         <div class="lib_search-container">
                             <div class="d-flex">
                                 <div class="manager_search-box">
@@ -41,6 +50,7 @@
                                         <div class="input-group date">
                                             <input type="date" class="form-control lib_search-content"
                                                    id="searchStartDate" name="startDate"
+                                                   onchange="handleDateChange()"
                                                    th:value="${startDate}"
                                                    placeholder="From date"/>
                                             <!--                                            <span class="input-group-append">-->
@@ -53,6 +63,7 @@
                                         <div class="input-group date" style="margin-left: 0.5rem">
                                             <input type="date" class="form-control lib_search-content"
                                                    id="searchEndDate" name="endDate"
+                                                   onchange="handleDateChange()"
                                                    th:value="${endDate}"
                                                    placeholder="To date"/>
                                             <!--                                            <span class="input-group-append">-->
@@ -67,7 +78,7 @@
                                     <div class="manager_search-box">
                                         <label>Page size: </label>
                                         <div class="d-flex">
-                                            <input type="number" class="lib_search-content"
+                                            <input type="number" class="lib_search-content" onchange="handleSizeChange()"
                                                    th:name="size" th:value="${size}" min="1"/>
                                         </div>
                                     </div>
@@ -77,7 +88,7 @@
                                         <label>Search course, lecturer email: </label>
                                         <div class="d-flex">
                                             <input class="lib_search-content" placeholder="Enter here..."
-                                                   th:id="search-text"
+                                                   th:id="search-text"   onkeyup="handleSearchKeyUp()"
                                                    th:name="search" th:value="${search}" type="text"/>
                                             <button class="lib_search-btn-wrapper lib_search-btn" type="submit">
                                                 <i class="lib_search-btn-icon fas fa-search"></i>
@@ -161,7 +172,7 @@
                     <!--                    </form>-->
                     <div class="table-responsive">
                         <table class="table table-striped table-sm" id="course-report">
-                            <tr class="n8">
+                            <tr class="tb-head">
                                 <th>STT</th>
                                 <th>Course Code</th>
                                 <th>Course Name</th>
@@ -228,6 +239,23 @@
 <script th:src="@{/js/librarian/librarian.js}"></script>
 
 <script th:inline="javascript">
+    function handleDateChange() {
+        console.log("Ngày đã thay đổi");
+        document.getElementById("myForm").submit(); // Thêm dòng này để submit form
+    }
+
+    function handleSizeChange() {
+        console.log("Kích thước trang đã thay đổi");
+        document.getElementById("myForm").submit(); // Thêm dòng này để submit form
+    }
+
+    function handleSearchKeyUp() {
+        var searchText = document.getElementById("search-text").value;
+        console.log("Đang tìm kiếm:", searchText);
+        document.getElementById("myForm").submit();
+    }
+
+
 
     // document.addEventListener("DOMContentLoaded", function() {
     //     // Tìm nút "Show All"
