--- a/src/main/resources/templates/admin/system_log/admin_user_logs.html
+++ b/src/main/resources/templates/admin/system_log/admin_user_logs.html
@@ -131,7 +131,7 @@
                                     <td th:text="${userLog.email}"></td>
                                     <td th:text="${userLog.url}"></td>
                                     <td th:text="${userLog.role}"></td>
-                                    <td th:text="${#temporals.format(userLog.createdDate, 'dd-MM-yyyy HH:mm:ss')}"></td>
+                                    <td th:text="${userLog.createdDate}"></td>
                                 </tr>
                             </th:block>
                             </tbody>
