--- a/src/main/resources/templates/lecturer/document/lecturer_add-document.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_add-document.html
@@ -192,12 +192,12 @@
                                                id="supportFileInput" th:name="files" multiple>
                                     </div>
                                 </div>
-                                <div class="mt-3 form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
-                                        Save as a draft
-                                    </label>
-                                </div>
+<!--                                <div class="mt-3 form-check">-->
+<!--                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">-->
+<!--                                    <label class="form-check-label" for="flexCheckDefault">-->
+<!--                                        Save as a draft-->
+<!--                                    </label>-->
+<!--                                </div>-->
 
                                 <div>
                                     <button type="submit" class="btn btn-save lecturer_btn-save"
