--- a/src/main/resources/templates/lecturer/document/lecturer_update-document.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_update-document.html
@@ -143,12 +143,12 @@
                                             <i>File will be previewed here.</i>
                                             <br>
                                             <br>
-                                            <span>Định dạng file cho phép hiển thị dưới dạng content:</span>
+                                            <span>File formats that allow display as content:</span>
                                             <br>
                                             <i>
-                                                <b>- Tài liệu:</b> .pdf, .doc, .docx, .ppt, .pptx, .txt, .html, .md
+                                                <b>- Document:</b> .pdf, .doc, .docx, .ppt, .pptx, .txt, .html, .md
                                                 <br>
-                                                <b>- Hình ảnh:</b> .jpg, .jpeg, .gif, .png, .svg
+                                                <b>- Image:</b> .jpg, .jpeg, .gif, .png, .svg
                                                 <br>
                                                 <b>- Video:</b> .mp4, .webm, .mov, .avi, .flv, .mkv
                                                 <br>
@@ -158,16 +158,16 @@
 
                                             <br>
 
-                                            <span>Định dạng file có thể preview:</span>
+                                            <span>Previewable file formats:</span>
                                             <i>
                                                 <br>
-                                                <b>- Tài liệu:</b> .pdf, .txt, .html, .md
+                                                <b>- Document:</b> .pdf, .txt, .html, .md
                                                 <br>
-                                                <b>- Hình ảnh:</b> .jpg, .jpeg, .gif, .png, .svg
+                                                <b>- Image:</b> .jpg, .jpeg, .gif, .png, .svg
                                                 <br>
-                                                <b>- Video:</b> .mp4, .webm, .mov, .mkv
+                                                <b>- Video:</b> .mp4, .webm, .mov, .avi, .flv, .mkv
                                                 <br>
-                                                <b>- Audio:</b> .mp3, .mp4, .flac, .wav, .ogg
+                                                <b>- Audio:</b> .mp3, .flac, .aac, .wav
                                             </i>
                                         </div>
                                     </div>
