--- a/src/main/resources/templates/student/student_search-results.html
+++ b/src/main/resources/templates/student/student_search-results.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" th:href="@{/css/fragment.css}"/>
     <link rel="stylesheet" th:href="@{/css/styles/student.css}"/>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body class="app_container">
 <!-- Header -->
@@ -108,7 +107,7 @@
                                         </div>
                                         <div class="doc-info grid__column-3 d-flex justify-content-center">
                                             <p><span class="doc-info-date"
-                                                     th:text="${#temporals.format(document.lastModifiedDate, 'dd-MM-yyyy HH:mm:ss')}"></span>
+                                                     th:text="${document.lastModifiedDate}"></span>
                                         </div>
                                     </div>
 
