--- a/src/main/resources/templates/lecturer/resource_type/lecturer_resource-type-detail.html
+++ b/src/main/resources/templates/lecturer/resource_type/lecturer_resource-type-detail.html
@@ -50,7 +50,7 @@
                                 <p th:text="${course.courseCode} + ' - ' + ${course.courseName}"></p>
                             </div>
                             <div class="d-inline-block">
-                                <a class="btn btn--hover" th:if="${course.topics.size() > 0}"
+                                <a class="btn btn--hover mb-2 mt-2" th:if="${course.topics.size() > 0}"
                                    th:href="@{'/lecturer/resource_types/' + ${resourceType.id} +'/documents/add'}">
                                     + Add document
                                 </a>
