--- a/src/main/resources/static/css/styles/librarian.css
+++ b/src/main/resources/static/css/styles/librarian.css
@@ -63,6 +63,7 @@
 }
 
 .lib_btn-save:hover {
+    background-color: #046732;
     color: var(--hover-color-2);
 }
 
@@ -72,7 +73,18 @@
 }
 
 .lib_btn-delete:hover {
+    background-color: #a23835;
     color: var(--hover-color-2);
+}
+
+.btn_assign-lecturer {
+    color: white;
+    background-color: var(--background-btn-color);
+}
+
+.btn_assign-lecturer:hover {
+    color: white;
+    background-color: var(--background-btn-color-hover);
 }
 
 .lib_table {
@@ -313,6 +325,15 @@ label.error {
 .form-chose-export-type button{
     margin-left: 1rem;
 }
-.remove-lecturer{
-    padding: 0.5rem;
+
+.btn_remove-lecturer {
+    background-color: #9e9e9e;
+    color: white;
+    margin-left: 3rem;
+    height: 30px;
+}
+
+.btn_remove-lecturer:hover {
+    background-color: #7a7979;
+    color: white;
 }
