--- a/src/main/resources/templates/lecturer/document/lecturer_document-detail.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_document-detail.html
@@ -78,16 +78,12 @@
                                                    th:href="@{'/lecturer/documents/' + ${document.id} + '/update'}">
                                                     <span><i class="fa-solid fa-edit"></i>  Edit document</span>
                                                 </a>
-                                                <a class="btn btn--hover"
-                                                   th:href="@{'/lecturer/documents/' + ${document.id} + '/delete'}">
+                                                <a class="btn btn--hover delete-doc" href="#" th:id="${document.id}">
                                                     <span><i class="fa-solid fa-trash"></i>  Delete document</span>
                                                 </a>
                                             </div>
-
                                         </div>
                                     </div>
-
-
                                 </div>
 
                                 <div class="stu_save-course-link" style="flex: 1;">
@@ -343,7 +339,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -364,8 +359,6 @@
 <script th:src="@{/js/lecturer/lecturer.js}"></script>
 <script th:src="@{/js/lecturer/lecturer_doc-detail.js}"></script>
 <script>
-
-
     function toggleContent() {
         let content = document.getElementById("content");
         let button = document.getElementById("readMoreBtn");
@@ -381,6 +374,38 @@
     }
 
     const overlay = document.getElementById('overlay');
+
+
+    function handleDeletion(url, successMessage) {
+        Swal.fire({
+            title: 'Do you want to delete this item?',
+            showCancelButton: true,
+            confirmButtonText: 'Delete',
+            icon: 'warning',
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    type: "GET", // or "DELETE"
+                    url: url,
+                    // include CSRF token if necessary
+                    success: function () {
+                        Swal.fire('Deleted!', successMessage, 'success');
+                    },
+                    error: function () {
+                        Swal.fire('Error', 'Failed to delete the item.', 'error');
+                    }
+                });
+            } else if (result.dismiss === Swal.DismissReason.cancel) {
+                Swal.fire('Cancelled', 'Deletion was canceled.', 'info');
+            }
+        });
+    }
+
+    // Usage example
+    $(document).on("click", ".delete-doc", function () {
+        var documentId = $(this).attr("id");
+        handleDeletion("/lecturer/documents/" + documentId + "/delete", 'Document is deleted');
+    });
 </script>
 </body>
 
