--- a/src/main/resources/templates/librarian/librarian_dashboard.html
+++ b/src/main/resources/templates/librarian/librarian_dashboard.html
@@ -57,7 +57,7 @@
                 <!--                        Statistics </a>-->
                 <!--                </div>-->
 
-                <div class="lib-main_menu-item">
+                <div class="lib-main_menu-item d-none">
                     <a th:href="@{/librarian/login_as_lecturer}">
                         <i class="p-2 fas fa-chalkboard-teacher"></i>
                         Login as lecturer</a>
