--- a/src/main/resources/templates/student/student_home.html
+++ b/src/main/resources/templates/student/student_home.html
@@ -105,17 +105,20 @@
                                                            th:href="@{'/student/courses/' + ${course.id}}"></a>
                                                         <p class="home__course-description"
                                                            th:text="${course.description}"></p>
-                                                        <ul class="home__course-lecturer-list">
-                                                            <th:block th:if="${course.lecturer ne null}">
-                                                                <li class="home__course-lecturer-item">
-                                                                    <a class="home__course-lecturer-link"
-                                                                       href="">
-                                                                        <span>Lecturer: </span>
-                                                                        <span th:text="${course.lecturer.account.name}"></span>
-                                                                    </a>
-                                                                </li>
-                                                            </th:block>
-                                                        </ul>
+<!--                                                        <ul class="home__course-lecturer-list">-->
+<!--                                                            <th:block th:if="${course.lecturer ne null}">-->
+<!--                                                                <li class="home__course-lecturer-item">-->
+<!--                                                                    <a class="home__course-lecturer-link"-->
+<!--                                                                       href="">-->
+<!--                                                                        <span>Lecturer: </span>-->
+<!--                                                                        <th:block th:if="${course.lecturer.account.name ne null}">-->
+<!--                                                                            <span th:text="${course.lecturer.account.name}"></span>-->
+<!--                                                                        </th:block>-->
+
+<!--                                                                    </a>-->
+<!--                                                                </li>-->
+<!--                                                            </th:block>-->
+<!--                                                        </ul>-->
                                                     </div>
                                                 </li>
                                             </ul>
