--- a/src/main/resources/templates/librarian/course/librarian_course-detail.html
+++ b/src/main/resources/templates/librarian/course/librarian_course-detail.html
@@ -108,7 +108,7 @@
                                                 class="btn lib_show-all-btn ">Add
                                         </button>
                                         <input class="lib_input form-control mt-1 " type="text" id="lecturerEmail"
-                                               name="lecturerEmail" placeholder="Email"/>
+                                               name="lecturerEmail" placeholder="Email" required/>
 
                                         <input type="hidden" id="courseName" th:value="${course.getCourseName()}"/>
                                         <input type="hidden" id="courseID" th:value="${course.getId()}"/>
