--- a/src/main/resources/templates/lecturer/document/lecturer_update-document.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_update-document.html
@@ -209,9 +209,13 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+<script th:src="@{/js/validation.js}"></script>
+
 <script th:inline="javascript">
     // VALIDATION AND SWAL
-    // validate_addDocument();
+    validate_updateDocument();
 
     var successParam = [[${param.success}]];
     if (successParam) {
