--- a/src/main/resources/templates/lecturer/topic/lecturer_update-topic-of-course.html
+++ b/src/main/resources/templates/lecturer/topic/lecturer_update-topic-of-course.html
@@ -143,7 +143,7 @@
     if (successParam) {
         Swal.fire(
             'Success!',
-            'Save topic successful!',
+            'Update topic successful!',
             'success'
         );
     }
